# fbot_manipulator

./: .gitignore  README.md
.github/: copilot-instructions.md
boris_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
boris_moveit_config/config/: boris.ros2_control.xacro  boris.srdf  boris.urdf.xacro  initial_positions.yaml  joint_limits.yaml  kinematics.yaml  moveit_controllers.yaml  ros2_controllers.yaml
boris_moveit_config/launch/: demo.launch.py  move_group.launch.py  moveit_rviz.launch.py  rsp.launch.py  setup_assistant.launch.py  spawn_controllers.launch.py  static_virtual_joint_tfs.launch.py  warehouse_db.launch.py
config/: pose.yaml  pose_clean_the_table.yaml  test.yaml  test_1032.yaml  teste_12_31.yaml
fbot_manipulator/: CMakeLists.txt  package.xml
fbot_manipulator/config/interbotix_arm/: mtc_config.yaml
fbot_manipulator/config/wx200/: manipulator_config.yaml  mtc_config.yaml
fbot_manipulator/config/xarm6/: manipulator_config.yaml  mtc_config.yaml
fbot_manipulator/include/fbot_manipulator/: motion_primitives_base.hpp  motion_primitives_wx200.hpp  motion_primitives_xarm.hpp  task_primitives.hpp  utils.hpp
fbot_manipulator/include/fbot_manipulator/collision/: add_object_collision.hpp
fbot_manipulator/include/fbot_manipulator/mtc/: mtc_pick_and_place_task.hpp  mtc_pick_task.hpp  mtc_place_task.hpp  mtc_pour_task.hpp  mtc_task.hpp
fbot_manipulator/include/fbot_manipulator/tasks/: pick_task.hpp  task.hpp
fbot_manipulator/launch/: manipulator_interface.launch.py  manipulator_interface_wx200.launch.py
fbot_manipulator/src/: manipulation_task_server.cpp  manipulator_interface_node.cpp  utils.cpp
fbot_manipulator/src/collision/: add_object_collision.cpp  shelf_collision.cpp
fbot_manipulator/src/motion_primitives/: motion_primitives_base.cpp  motion_primitives_wx200.cpp  motion_primitives_xarm.cpp
fbot_manipulator/src/mtc/: mtc_pick_and_place_task.cpp  mtc_pick_task.cpp  mtc_place_task.cpp  mtc_pour_task.cpp  mtc_task.cpp
fbot_manipulator/src/tasks/: pick_task.cpp
fbot_manipulator/src/utils/: README.MD  save_arm_pose.cpp  save_arm_pose.py
fbot_manipulator/test/: test_mtc_pick_performance.cpp
fbot_manipulator_msgs/: CMakeLists.txt  package.xml
fbot_manipulator_msgs/action/: ManipulationTask.action
fbot_manipulator_msgs/srv/: MoveGripper.srv  MoveJoint.srv  MoveToNamedTarget.srv  MoveToPose.srv
fbot_manipulator_tools/: package.xml  setup.cfg  setup.py
fbot_manipulator_tools/config/: pose.yaml
fbot_manipulator_tools/fbot_manipulator_tools/: README.md  saveArmPos.py  save_arm_pose.py  save_arm_pose_wx200.py  save_wx200_arm_pose.py
interbotix_ros_manipulators/interbotix_ros_xsarms/interbotix_xsarm_descriptions/urdf/: control.urdf.xacro
interbotix_ros_manipulators/interbotix_ros_xsarms/interbotix_xsarm_moveit/config/srdf/: wx200.srdf.xacro
interbotix_ros_manipulators/interbotix_ros_xsarms/interbotix_xsarm_sim/launch/: xsarm_gz_classic.launch.py
interbotix_ros_toolboxes/: .gitignore
interbotix_ros_toolboxes/interbotix_xs_toolbox/interbotix_xs_modules/interbotix_xs_modules/xs_robot/: arm.py  pose.yaml
